# haoyuhu.github.io

./: .env.example  .gitignore  App.tsx  README.md  _config.yml  constants.tsx  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  types.ts  vite.config.ts
.github/workflows/: deploy.yml
backend/: server.py
components/: AudioPlayer.tsx  BlogCard.tsx  ChatTerminal.tsx  ContributionHeatmap.tsx  GitHubStats.tsx  MarkdownRenderer.tsx  ProjectCard.tsx  ResumeView.tsx  StudioView.tsx
content/cache/: github_profile.json  github_repos.json
content/config/: assistant.yaml  profile.yaml  projects.yaml  resume.yaml  site.yaml
haoyu_portfolio/: __init__.py  bundle.py  cli.py  paths.py  schemas.py  utils.py  webapp.py
haoyu_portfolio/llm/: base.py  factory.py  gemini.py  mock.py  openai_compatible.py
haoyu_portfolio/services/: chat.py  checks.py  content_creation.py  github_sync.py  profile_import.py
lib/: i18n.ts
public/: CNAME  data.json
scripts/: browser_smoke.sh  config.yaml  curl_migration_helper.py  migrate_legacy_content.py  migrate_legacy_data.py  orchestrator.py  run_curl_migration_item.sh  update-data.mjs  utils.py
scripts/modules/: content_processor.py  cv_parser.py  github_fetcher.py
services/: geminiService.ts
tests/: conftest.py  test_bundle.py  test_checks.py  test_cli.py  test_content_creation.py  test_content_processor.py  test_cv_parser.py  test_github_fetcher.py  test_github_sync.py  test_profile_import.py  test_server.py  test_utils.py  test_webapp.py
(+370 files in other folders)
